Added overview section

--- a/app/renderer/assets/locales/en-US/common.json
+++ b/app/renderer/assets/locales/en-US/common.json
@@ -11,6 +11,7 @@
   "continue_setup": "Continue Account Setup",
   "copy_to_clipboard": "Copy to Clipboard",
   "error": "Error",
+  "last_updated": "Last Updated",
   "loading": "Loaded",
   "next": "Next",
   "private_key": "Private Key",
