--- a/app/renderer/assets/locales/en-US/welcome.json
+++ b/app/renderer/assets/locales/en-US/welcome.json
@@ -22,6 +22,7 @@
   "welcome_history_plugin_warning_content": "This node appears to not have the history plugin enabled, please note that some of the features of this wallet won't work with this node. You can use 'https://eos.greymass.com', 'http://api.eossweden.se' or 'http://eu.eosdac.io' if you want to take full advantage of this wallet.",
   "welcome_history_plugin_warning_title": "This node only allows partial use of this wallet",
   "welcome_import_wallets": "Restore Backup from File",
+  "welcome_instructions_1_r2": "Anchor is a decentralized application (DAPP) and requires a connection to an EOSIO compatible API server. To get started, either select a blockchain from the dropdown to select a default server or manually enter a server address.",
   "welcome_instructions_2": "Enter the node you'd like to connect to.",
   "welcome_instructions_3": "Enter the public key or account name.",
   "welcome_instructions_3_cold": "Enter the account name to use.",
@@ -58,6 +59,7 @@
   "welcome_more_servers_1": "Not sure what server to use?",
   "welcome_more_servers_2": "Click here to view a list of options.",
   "welcome_network_config": "OR - Specify a blockchain to connect to the default API node.",
+  "welcome_network_config_r2": "Select a blockchain to connect to a default server.",
   "welcome_network_config_cold": "Select a default blockchain",
   "welcome_path_generate_keys_header": "Create Account Request",
   "welcome_path_generate_keys_subheader": "Generate an account creation request that can be sent to another account holder willing to create an account for you.",
