locale: added english locales to tools home page

--- a/app/renderer/assets/locales/en-US/tools.json
+++ b/app/renderer/assets/locales/en-US/tools.json
@@ -235,6 +235,7 @@
   "tools_menu_keygenerator": "Key Generator",
   "tools_menu_keys": "Key Generator",
   "tools_menu_keyvalidator": "Key Validator",
+  "tools_menu_ledger": "Ledger",
   "tools_menu_name_bidding": "Premium Name Bidding",
   "tools_menu_permissions": "Permissions",
   "tools_menu_ping": "API Recommender",
@@ -243,15 +244,20 @@
   "tools_menu_reset": "Reset Application",
   "tools_menu_rex_lend": "REX Exchange (Leasing)",
   "tools_menu_rex_rent": "REX Exchange (Rentals)",
+  "tools_menu_security_header": "Security",
   "tools_menu_services_header": "3rd Party Services",
   "tools_menu_state": "Wallet State",
   "tools_menu_state_chain": "Chain State",
   "tools_menu_state_globals": "Global State",
   "tools_menu_state_header": "Local Data States",
   "tools_menu_system_log": "API Traffic Log",
+  "tools_menu_token_header": "Token",
   "tools_menu_utilities_header": "Utilities",
   "tools_menu_wallet_header": "Wallet Tools",
   "tools_menu_wallets": "Manage Wallets",
+  "tools_menu_third_party_services_header": "3rd party services",
+  "tools_menu_network_utilities_header": "Network Utilities",
+  "tools_menu_registration_header": "Registration",
   "tools_modal_airgrab_button": "Claim Tokens",
   "tools_modal_airgrab_description_label": "Airgrab Description:",
   "tools_modal_airgrab_header": "Confirm signup and claim your {{symbol}} tokens.",
