Setup work + Cold Wallet support

--- a/app/renderer/assets/locales/en-US/global.json
+++ b/app/renderer/assets/locales/en-US/global.json
@@ -3,6 +3,10 @@
   "account_that_uses_a_proxy_is_not_allowed_to_become_a_proxy": "This account currently has set it's votes to another proxy, and cannot itself register as a proxy. To remove the set proxy, click the Change Voter Proxy button on the Producer Voting page.",
   "cannot_undelegate_bandwidth_until_the_chain_is_activated": "This blockchain has yet to have 15 percent of it's tokens staked and therefore unstaking is currently disabled. Once that percentage is reached, you will be able to unstake your tokens.",
   "error": "Error",
+  "global_account_import_private_cold_wallet_header": "Cold Wallet",
+  "global_account_import_private_cold_wallet_subheader": "A wallet designed to work on an offline computer acting as a cold storage device.",
+  "global_account_import_private_cold_wallet_description": "Any wallet created in this mode will only be able load and sign 'Unsigned Transaction' files saved by a corresponding 'Watch Wallet' on a separate computer. Since this mode of operation is entirely disconnected from the internet, it does not validate any of the information about an account you enter. Please ensure it is correct or transaction signing may fail.",
+  "error_accountName_not_unique_in_contacts": "This account name is already in your list of contacts.",
   "error_account_does_not_exist": "This account name does not exist.",
   "error_account_does_not_exist_on_chain": "The {{account}} account does not seem to exist on the specified blockchain.",
   "error_account_name_not_available": "This Account Name has already been taken.",
@@ -71,6 +75,9 @@
   "global_account_import_private_requires_hash_button": "Setup Password",
   "global_account_import_private_requires_hash_header": "No wallet password established.",
   "global_account_import_private_requires_hash_subheader": "Before you can import a private key, the application needs to establish a password for encryption. Please set a password to enabling importing private keys and remember it, it will not be stored and cannot be recovered or changed.",
+  "global_account_import_private_requires_hash_header_r2": "Setup your Anchor password",
+  "global_account_import_private_requires_hash_subheader_r2": "Before storing any sensitive information, like private keys, first you will need to setup a password for use within your Anchor wallet.",
+  "global_account_import_private_requires_hash_description": "Please enter a password of your choosing and keep it safe. This password cannot be recovered and is not stored anywhere within the app.",
   "global_account_import_private_requires_hot_header": "This action requires an existing Hot Wallet.",
   "global_account_import_private_requires_hot_subheader": "Swap to an existing Hot Wallet before importing to proceed. If you are using the wallet in Watch Wallet mode only, and wish to use the Hot Wallet features, please reset the application and import the Hot Wallet first.",
   "global_account_import_private_swap_first_header": "Swap to a Hot Wallet",
