Improvements to the initial setup process

--- a/app/renderer/assets/locales/en-US/common.json
+++ b/app/renderer/assets/locales/en-US/common.json
@@ -18,6 +18,7 @@
   "property": "Property",
   "public_key": "Public Key",
   "remove": "Remove",
+  "reset": "Reset",
   "reset_application": "DEBUG: Reset Application",
   "feature_not_supported_blockchain": "This feature is not yet available on this blockchain.",
   "search": "Search...",
