--- a/app/renderer/assets/locales/en-US/global.json
+++ b/app/renderer/assets/locales/en-US/global.json
@@ -5,7 +5,7 @@
   "error": "Error",
   "global_account_import_private_cold_wallet_header": "Cold Wallet",
   "global_account_import_private_cold_wallet_subheader": "A wallet designed to work on an offline computer acting as a cold storage device.",
-  "global_account_import_private_cold_wallet_description": "Any wallet created in this mode will only be able load and sign 'Unsigned Transaction' files saved by a corresponding 'Watch Wallet' on a separate computer. Since this mode of operation is entirely disconnected from the internet, it does not validate any of the information about an account you enter. Please ensure it is correct or transaction signing may fail.",
+  "global_account_import_private_cold_wallet_description": "Any wallet created in this mode will only be able sign 'Unsigned Transaction' files saved using a 'Watch Wallet' on a separate computer. Since this mode of operation is entirely offline, it does not validate any of the information about the account(s) you setup. Please ensure it is the correct information or transaction signing will fail.",
   "error_accountName_not_unique_in_contacts": "This account name is already in your list of contacts.",
   "error_account_does_not_exist": "This account name does not exist.",
   "error_account_does_not_exist_on_chain": "The {{account}} account does not seem to exist on the specified blockchain.",
@@ -67,15 +67,15 @@
   "global_account_import_ledger_description": "Import an account that has already been converted to use a Ledger device.",
   "global_account_import_ledger_key_index_label": "Key Index",
   "global_account_import_ledger_load_key_button": "Load Accounts",
-  "global_account_import_ledger_not_connected_content": "The Ledger device must be connected and ready before this process can be run. Click the USB icon in the top menu or visit Tools -> Ledger to establish a connection.",
-  "global_account_import_ledger_not_connected_header": "Ledger not connected",
+  "global_account_import_ledger_not_connected_content_r2": "The Ledger device must be connected and ready before continuing. Click the USB icon in the upper right menu to connect your device.",
+  "global_account_import_ledger_not_connected_header_r2": "Ledger not found",
   "global_account_import_ledger_select_description": "Select the accounts to import from the list below.",
   "global_account_import_private_description": "To import additional accounts, simply enter the private key. The app will convert it to a public key and lookup all accounts with relevant permissions.",
   "global_account_import_private_key": "Private Key (51 characters and starts with the number 5)",
   "global_account_import_private_requires_hash_button": "Setup Password",
   "global_account_import_private_requires_hash_header": "No wallet password established.",
   "global_account_import_private_requires_hash_subheader": "Before you can import a private key, the application needs to establish a password for encryption. Please set a password to enabling importing private keys and remember it, it will not be stored and cannot be recovered or changed.",
-  "global_account_import_private_requires_hash_header_r2": "Setup your Anchor password",
+  "global_account_import_private_requires_hash_header_r2": "Set a secure password for your Anchor wallet",
   "global_account_import_private_requires_hash_subheader_r2": "Before storing any sensitive information, like private keys, first you will need to setup a password for use within your Anchor wallet.",
   "global_account_import_private_requires_hash_description": "Please enter a password of your choosing and keep it safe. This password cannot be recovered and is not stored anywhere within the app.",
   "global_account_import_private_requires_hot_header": "This action requires an existing Hot Wallet.",
