--- a/app/renderer/assets/locales/en-US/welcome.json
+++ b/app/renderer/assets/locales/en-US/welcome.json
@@ -1,8 +1,6 @@
 {
   "welcome_account_coldwallet_content": "A cold wallet cannot verify the validity of the account name used. Please ensure it is correct or transactions may not be able to be signed.",
   "welcome_account_coldwallet_title": "Cold Wallet - Account Import",
-  "welcome_step": "Step",
-  "welcome_stage_advanced_instructions": "The following options are provided as alternative setup methods.",
   "welcome_account_lookup_content": "If you enter a public key, a lookup will be performed to find associated accounts.",
   "welcome_account_lookup_fail_content": "The account name or public key could not be found.",
   "welcome_account_lookup_fail_title": "Failed to locate an account",
@@ -59,8 +57,8 @@
   "welcome_more_servers_1": "Not sure what server to use?",
   "welcome_more_servers_2": "Click here to view a list of options.",
   "welcome_network_config": "OR - Specify a blockchain to connect to the default API node.",
-  "welcome_network_config_r2": "Select a blockchain to connect to a default server.",
   "welcome_network_config_cold": "Select a default blockchain",
+  "welcome_network_config_r2": "Select a blockchain to connect toso a default server.",
   "welcome_path_generate_keys_header": "Create Account Request",
   "welcome_path_generate_keys_subheader": "Generate an account creation request that can be sent to another account holder willing to create an account for you.",
   "welcome_path_have_account_button": "Import Existing Account",
@@ -78,11 +76,13 @@
   "welcome_stage_account": "Account",
   "welcome_stage_account_ledger": "Account (from Ledger)",
   "welcome_stage_advanced": "Advanced Setup Options",
+  "welcome_stage_advanced_instructions": "The following options are provided as alternative setup methods.",
   "welcome_stage_authorize": "Authorize",
   "welcome_stage_blockchain": "Blockchain",
   "welcome_stage_coldwallet": "Cold Wallet",
   "welcome_stage_connection": "Connection",
   "welcome_stage_wallet": "Wallet",
   "welcome_stage_watchwallet": "Watch Wallet",
+  "welcome_step": "Step",
   "welcome_use_coldwallet": "Setup Cold Wallet"
 }
