--- a/app/renderer/assets/locales/en-US/tools.json
+++ b/app/renderer/assets/locales/en-US/tools.json
@@ -335,7 +335,8 @@
   "tools_proxy_text_registered": "This account is now registered and available to be used as a proxy account.",
   "tools_public_active_key_error": "Invalid key",
   "tools_public_owner_key_error": "Invalid key",
-  "tools_reset_body_1": "This will delete all of your local wallets, passwords, settings, custom tracked tokens, and contacts from this computer. The application will then restart and intiate the welcome and initial import process.",
+  "tools_reset_body_1": "This will delete all of your local wallets, passwords, settings, custom tracked tokens, and contacts from Anchor. The application will then restart and intiate the welcome and initial import process.",
+  "tools_reset_body_2": "IMPORTANT: Any backups you have made of this wallet will be unaffected. If this wallet contains keys you need, please create a backup before resetting the application.",
   "tools_reset_header_header": "Reset Application",
   "tools_reset_header_subheader": "This feature will completely reset this application to a default installation state.",
   "tools_settings_header": "Application Settings",
