--- a/app/renderer/assets/locales/en-US/producers.json
+++ b/app/renderer/assets/locales/en-US/producers.json
@@ -40,7 +40,7 @@
   "producer_voter_proxying_vote": "Currently selected proxy votes",
   "producer_voter_remove_all_votes_header": "Remove all votes?",
   "producer_voter_remove_all_votes_subheader": "Saving after removing all existing votes will uncast any vote you have previously cast for any producer.",
-  "producer_voter_save_changes": "Submit votes for selected producers",
+  "producer_voter_save_changes_r2": "Submit Vote(s)",
   "producer_voter_total_staked": "Total Staked",
   "producer_voter_unregistered_block_producers": "Unregistered Producers",
   "producer_voter_votes_used": "total votes cast",
