message table, get_producer_jurisdiction repair

--- a/app/renderer/assets/locales/et-EE/producers.json
+++ b/app/renderer/assets/locales/et-EE/producers.json
@@ -12,6 +12,9 @@
   "block_producer_total_votes": "Hääli kokku",
   "block_producer_total_weight": "kogu häälte tugevus",
   "block_producer_votes_none": "Mitte ükski",
+  "jurisdictions_code_table_header": "Code",
+  "jurisdictions_jurisdiction_table_header": "Jurisdiction",
+  "jurisdictions_description_table_header": "Description",
   "producer_info_data": "Järgnev on toores JSON mille plokitootja esitas plokiahelale.",
   "producer_info_description": "Järgnev teave oli esitatud selle plokitootja poolt targa lepingu `producerjson` failis, avalikult esitamiseks kõikides EOS rakendustes, mis seda toetavad. Lisateavet käesoleva protokolli kohta - ",
   "producer_info_description_more": "loe tutvustavat postitust",
