--- a/app/renderer/assets/locales/ja-JP/producers.json
+++ b/app/renderer/assets/locales/ja-JP/producers.json
@@ -12,6 +12,9 @@
   "block_producer_total_votes": "総投票数",
   "block_producer_total_weight": "総投票ウェイト",
   "block_producer_votes_none": "なし",
+  "jurisdictions_code_table_header": "Code",
+  "jurisdictions_jurisdiction_table_header": "Jurisdiction",
+  "jurisdictions_description_table_header": "Description",
   "producer_info_data": "以下は、ブロックプロデューサによってブロックチェーンに提出された生のJSONです。",
   "producer_info_description": "以下の情報はこのブロックプロデューサが「producerjson」スマートコントラクトに提出したものであり、サポートするすべてのEOSアプリケーションで公開されています。このプロトコルの詳細は - ",
   "producer_info_description_more": "紹介記事を読む",
