--- a/app/renderer/assets/locales/ko-KR/producers.json
+++ b/app/renderer/assets/locales/ko-KR/producers.json
@@ -12,6 +12,9 @@
   "block_producer_total_votes": "총 투표수",
   "block_producer_total_weight": "총 투표 가중치",
   "block_producer_votes_none": "없음",
+  "jurisdictions_code_table_header": "Code",
+  "jurisdictions_jurisdiction_table_header": "Jurisdiction",
+  "jurisdictions_description_table_header": "Description",
   "producer_info_data": "다음은 블록 생성자가 블록 체인에 제출 한 원본 JSON입니다.",
   "producer_info_description": "이 블록 생산자가 다음 정보를 'producerjson` 스마트 계약에 제출하여이를 지원하는 모든 EOS 애플리케이션에서 공개적으로 표시했습니다. 이 프로토콜에 대한 자세한 내용은 - ",
   "producer_info_description_more": "소개 게시물 읽기",
