--- a/app/renderer/assets/locales/en-US/common.json
+++ b/app/renderer/assets/locales/en-US/common.json
@@ -1,7 +1,7 @@
 {
   "account_authority": "Account/Authority",
   "application_name": "eos-voter",
-  "application_version": "v0.7.9",
+  "application_version": "v0.7.9-alpha.1",
   "back": "Back",
   "block_height": "Block Height",
   "blockchain": "Blockchain",
