--- a/app/renderer/assets/locales/ru-RU/common.json
+++ b/app/renderer/assets/locales/ru-RU/common.json
@@ -1,7 +1,7 @@
 {
   "account_authority": "Account/Authority",
   "application_name": "Настольное приложение для блокцепи EOS (eos-voter)",
-  "application_version": "v0.7.9",
+  "application_version": "v0.7.9-alpha.1",
   "back": "Back",
   "block_height": "Номер Блока",
   "blockchain": "Blockchain",
