--- a/app/renderer/assets/locales/en-US/global.json
+++ b/app/renderer/assets/locales/en-US/global.json
@@ -55,6 +55,7 @@
   "error_ram_under_minimum_of_2600_for_new_account": "A minimum of 2600 Bytes of RAM is required to create a new account.",
   "error_ram_usage_exceeded": "RAM usage exceeded. You will need to buy more ram to carry out this action.",
   "error_ram_using_more_than_usage": "Insufficient available RAM balance to complete transaction.",
+  "error_requested_actor_missing": "The account that was requested to sign this transaction is currently not loaded in this wallet.",
   "error_transferring_to_exchange_without_memo": "Cannot transfer funds to an exchange without passing the memo that was given.",
   "error_wallet_already_exists": "The wallet already exists on the selected chain.",
   "error_withdraw_account_validation_failed": "Unexpected error. Cannot validate withdraw account.",
