--- a/app/renderer/assets/locales/en-US/crosschaintransfer.json
+++ b/app/renderer/assets/locales/en-US/crosschaintransfer.json
@@ -1,7 +1,7 @@
 {
   "crosschain_transfer_beos_account_validation": "Please wait, Bitshares EOS account is validating...",
   "crosschain_transfer_confirming_body_quantity": "Please ensure the quantity for this transfer is valid.",
-  "crosschain_transfer_confirming_eos_network_fee": "Fee for withdrawal is the same as for the transfer in the Eos network.",
+  "crosschain_transfer_confirming_eos_network_fee": "Fee for 'Bitshares' withdrawal/crosschain transfer is the same as for the transfer in the Eos network.",
   "crosschain_transfer_confirming_title": "Review your Transaction",
   "crosschain_transfer_header_available": "available to transfer.",
   "crosschain_transfer_modal_title_2": "Crosschain Transfer Tokens",
