enhancement: added setting for dangerous transactions
closes issue 648

--- a/app/renderer/assets/locales/en-US/global.json
+++ b/app/renderer/assets/locales/en-US/global.json
@@ -73,11 +73,11 @@
   "global_account_import_private_description": "To import additional accounts, simply enter the private key. The app will convert it to a public key and lookup all accounts with relevant permissions.",
   "global_account_import_private_key": "Private Key (51 characters and starts with the number 5)",
   "global_account_import_private_requires_hash_button": "Setup Password",
-  "global_account_import_private_requires_hash_header": "No wallet password established.",
-  "global_account_import_private_requires_hash_subheader": "Before you can import a private key, the application needs to establish a password for encryption. Please set a password to enabling importing private keys and remember it, it will not be stored and cannot be recovered or changed.",
-  "global_account_import_private_requires_hash_header_r2": "Set a secure password for your Anchor wallet",
-  "global_account_import_private_requires_hash_subheader_r2": "Before storing any sensitive information, like private keys, first you will need to setup a password for use within your Anchor wallet.",
   "global_account_import_private_requires_hash_description": "Please enter a password of your choosing and keep it safe. This password cannot be recovered and is not stored anywhere within the app.",
+  "global_account_import_private_requires_hash_header": "No wallet password established.",
+  "global_account_import_private_requires_hash_header_r2": "Set a secure password for your Anchor wallet",
+  "global_account_import_private_requires_hash_subheader": "Before you can import a private key, the application needs to establish a password for encryption. Please set a password to enabling importing private keys and remember it, it will not be stored and cannot be recovered or changed.",
+  "global_account_import_private_requires_hash_subheader_r2": "Before storing any sensitive information, like private keys, first you will need to setup a password for use within your Anchor wallet.",
   "global_account_import_private_requires_hot_header": "This action requires an existing Hot Wallet.",
   "global_account_import_private_requires_hot_subheader": "Swap to an existing Hot Wallet before importing to proceed. If you are using the wallet in Watch Wallet mode only, and wish to use the Hot Wallet features, please reset the application and import the Hot Wallet first.",
   "global_account_import_private_swap_first_header": "Swap to a Hot Wallet",
@@ -140,6 +140,8 @@
   "global_modal_settings_customtoken_notfound_header": "Token not found",
   "global_modal_settings_customtoken_notfound_subheader": "The details for the token entered could not be found.",
   "global_select_language": "Select Language",
+  "global_settings_allow_dangerous_transactions": "Allow dangerous transactions",
+  "global_settings_disable_dangerous_transactions": "Disable dangerous transactions",
   "global_settings_display_resources_available": "Display Resources Available",
   "global_settings_display_resources_used": "Display Resources Used",
   "global_settings_filter_spam_transfers_0_0002": "Filter out transfers with a 0.0001 amount",
