--- a/app/renderer/assets/locales/en-US/tools.json
+++ b/app/renderer/assets/locales/en-US/tools.json
@@ -52,6 +52,7 @@
   "tools_blockchains_testnet_label": "TESTNET",
   "tools_blockchains_wallets": "Wallets",
   "tools_button_create_account": "Create Account Now",
+  "tools_change_allow_dangerous_transactions": "Allow dangerous transactions in URI signer",
   "tools_change_block_explorer": "Change Block Explorer",
   "tools_change_block_explorer2": "Default Block Explorer",
   "tools_change_display_test_networks": "Enable Testnet Support",
@@ -184,22 +185,22 @@
   "tools_form_proxy_info_website": "Website Url",
   "tools_form_proxy_info_wechat": "Wechat Username",
   "tools_governance_proposal_confirm": "Cast a Proposal Vote",
-  "tools_governance_proposal_unvote_ricardian_contract_one": "`unvote` allows a user to remove their vote of {{ vote_value }} they have previously cast on {{ proposal_name }}.",
-  "tools_governance_proposal_unvote_ricardian_contract_two": "`unvote` will not function during the 72 hour period after {{ proposal_name }} has expired at {{ expires_at }}.",
-  "tools_governance_proposal_unvote_ricardian_contract_three": "The RAM that was used to store the vote shall be freed-up immediately after `unvote` has been called by {{ voter }}.",
-  "tools_governance_proposal_vote_ricardian_contract_one": "I, {{ voter }}, am casting a vote of {{ vote_value }} on {{ proposal_name }}.",
-  "tools_governance_proposal_vote_ricardian_contract_two": "To change my vote, I may call another `vote` action, with only the most recent `vote` of {{ vote_value }} being the `vote` which I, {{ voter }}, intend to be considered as valid.",
-  "tools_governance_proposal_vote_ricardian_contract_three": "I acknowledge that using the `unvote` action after placing a `vote` will render my previous `vote` of {{ vote_value }} null and void.",
-  "tools_governance_proposal_vote_ricardian_contract_four": "If I, {{ voter }}, have a proxy registered for my on-chain voting, my own `vote` of {{ vote_value }} shall take  precedence over my proxy's `vote`.",
-  "tools_governance_proposal_vote_ricardian_contract_five": "My stake weight shall be deducted from their voting power and cast as my own.",
-  "tools_governance_proposal_vote_ricardian_contract_six": "If I, {{ voter }}, am not the beneficial owner of these tokens, I stipulate I have proof that I’ve been authorized to vote these tokens by their beneficial owner(s).",
-  "tools_governance_proposal_vote_ricardian_contract_seven": "If I, {{ voter }}, am registered as a proxy and am casting votes on behalf of other users of the blockchain, I acknowledge that I am doing so on their behalf and that they may at any time withdraw their stake weight from my voting power by casting their own `vote` or removing my account as their proxy.",
-  "tools_governance_proposal_vote_ricardian_contract_eight": "I, {{ voter }}, stipulate I have not and will not accept anything of value in exchange for this `vote`, on penalty of confiscation of these tokens, and other penalties.",
-  "tools_governance_proposal_vote_ricardian_contract_date_unavailable": "(Date Unavailable)",
   "tools_governance_proposal_confirm_unvote": "By confirming to unvote, the staked weight of this account will be removed from both supporting and rejecting this proposal.",
   "tools_governance_proposal_confirm_vote_no": "By confirming this 'NO' vote, the staked weight of this account will be used to show objection to this proposal.",
   "tools_governance_proposal_confirm_vote_yes": "By confirming this 'YES' vote, the staked weight of this account will be used to show support to this proposal.",
   "tools_governance_proposal_ricardian_contract_header": "Read and Agree to the following Ricardian Contract before confirming the transaction:",
+  "tools_governance_proposal_unvote_ricardian_contract_one": "`unvote` allows a user to remove their vote of {{ vote_value }} they have previously cast on {{ proposal_name }}.",
+  "tools_governance_proposal_unvote_ricardian_contract_three": "The RAM that was used to store the vote shall be freed-up immediately after `unvote` has been called by {{ voter }}.",
+  "tools_governance_proposal_unvote_ricardian_contract_two": "`unvote` will not function during the 72 hour period after {{ proposal_name }} has expired at {{ expires_at }}.",
+  "tools_governance_proposal_vote_ricardian_contract_date_unavailable": "(Date Unavailable)",
+  "tools_governance_proposal_vote_ricardian_contract_eight": "I, {{ voter }}, stipulate I have not and will not accept anything of value in exchange for this `vote`, on penalty of confiscation of these tokens, and other penalties.",
+  "tools_governance_proposal_vote_ricardian_contract_five": "My stake weight shall be deducted from their voting power and cast as my own.",
+  "tools_governance_proposal_vote_ricardian_contract_four": "If I, {{ voter }}, have a proxy registered for my on-chain voting, my own `vote` of {{ vote_value }} shall take  precedence over my proxy's `vote`.",
+  "tools_governance_proposal_vote_ricardian_contract_one": "I, {{ voter }}, am casting a vote of {{ vote_value }} on {{ proposal_name }}.",
+  "tools_governance_proposal_vote_ricardian_contract_seven": "If I, {{ voter }}, am registered as a proxy and am casting votes on behalf of other users of the blockchain, I acknowledge that I am doing so on their behalf and that they may at any time withdraw their stake weight from my voting power by casting their own `vote` or removing my account as their proxy.",
+  "tools_governance_proposal_vote_ricardian_contract_six": "If I, {{ voter }}, am not the beneficial owner of these tokens, I stipulate I have proof that I’ve been authorized to vote these tokens by their beneficial owner(s).",
+  "tools_governance_proposal_vote_ricardian_contract_three": "I acknowledge that using the `unvote` action after placing a `vote` will render my previous `vote` of {{ vote_value }} null and void.",
+  "tools_governance_proposal_vote_ricardian_contract_two": "To change my vote, I may call another `vote` action, with only the most recent `vote` of {{ vote_value }} being the `vote` which I, {{ voter }}, intend to be considered as valid.",
   "tools_keys_key_generation_copy_clipboard": "Copy to Clipboard",
   "tools_keys_key_generation_header": "Key Pair Generation",
   "tools_keys_key_generation_new_key": "Generate Key",
@@ -237,10 +238,12 @@
   "tools_menu_keyvalidator": "Key Validator",
   "tools_menu_ledger": "Ledger",
   "tools_menu_name_bidding": "Premium Name Bidding",
+  "tools_menu_network_utilities_header": "Network Utilities",
   "tools_menu_permissions": "Permissions",
   "tools_menu_ping": "API Recommender",
   "tools_menu_proxy": "Register Voting Proxy",
   "tools_menu_recommendation": "Security / Best Practices",
+  "tools_menu_registration_header": "Registration",
   "tools_menu_reset": "Reset Application",
   "tools_menu_rex_lend": "REX Exchange (Leasing)",
   "tools_menu_rex_rent": "REX Exchange (Rentals)",
@@ -251,13 +254,11 @@
   "tools_menu_state_globals": "Global State",
   "tools_menu_state_header": "Local Data States",
   "tools_menu_system_log": "API Traffic Log",
+  "tools_menu_third_party_services_header": "3rd party services",
   "tools_menu_token_header": "Token",
   "tools_menu_utilities_header": "Utilities",
   "tools_menu_wallet_header": "Wallet Tools",
   "tools_menu_wallets": "Manage Wallets",
-  "tools_menu_third_party_services_header": "3rd party services",
-  "tools_menu_network_utilities_header": "Network Utilities",
-  "tools_menu_registration_header": "Registration",
   "tools_modal_airgrab_button": "Claim Tokens",
   "tools_modal_airgrab_description_label": "Airgrab Description:",
   "tools_modal_airgrab_header": "Confirm signup and claim your {{symbol}} tokens.",
@@ -298,6 +299,7 @@
   "tools_proposal_rejected_message_content": "The stake weighted value of this account has been recorded as opposing this proposal.",
   "tools_proposal_rejected_message_header": "This account has opposed this proposal.",
   "tools_proposal_view_on_block_explorer": "To view the full details of this proposal, please visit on one of the following websites:",
+  "tools_proposals": "All",
   "tools_proposals_container_message": "Proposal Scope:",
   "tools_proposals_container_message_none": "No proposals found in the scope named \"{{scope}}\".",
   "tools_proposals_expires": "Expires",
@@ -310,10 +312,9 @@
   "tools_proposals_search_placeholder": "Search for proposals..",
   "tools_proposals_select_button": "Details",
   "tools_proposals_sort_by_vote": "Show only proposals voted on",
-  "tools_proposals_subheader": "This is an early release of the interface in eos-voter to interact with the LIVE EOS Referendum System. Expect a major revamp of this tool in the near future.",
-  "tools_proposals": "All",
   "tools_proposals_status_filter_active": "Only show Active Proposals",
   "tools_proposals_status_filter_expired": "Only show Expired Proposals",
+  "tools_proposals_subheader": "This is an early release of the interface in eos-voter to interact with the LIVE EOS Referendum System. Expect a major revamp of this tool in the near future.",
   "tools_proposals_title": "Title",
   "tools_proposals_voted_filter_accepted": "Only Show Proposals Accepted",
   "tools_proposals_voted_filter_all": "Don't filter proposals by vote",
