--- a/app/renderer/assets/locales/et-EE/transfer.json
+++ b/app/renderer/assets/locales/et-EE/transfer.json
@@ -5,6 +5,7 @@
   "transfer_destination_account_is_contract": "The destination account has a smart contract enabled, and by sending to this account, your transfer may trigger additional actions which could consume RAM.",
   "transfer_header_available": "available to transfer.",
   "transfer_label_from": "Saatja konto",
+  "transfer_label_jurisdictions": "Jurisdictions",
   "transfer_label_memo": "Ülekande Teade",
   "transfer_label_quantity": "Kogus",
   "transfer_label_to": "Saaja Konto",
