--- a/app/renderer/assets/locales/fr-FR/transfer.json
+++ b/app/renderer/assets/locales/fr-FR/transfer.json
@@ -5,6 +5,7 @@
   "transfer_destination_account_is_contract": "The destination account has a smart contract enabled, and by sending to this account, your transfer may trigger additional actions which could consume RAM.",
   "transfer_header_available": "available to transfer.",
   "transfer_label_from": "Compte d'origine ",
+  "transfer_label_jurisdictions": "Jurisdictions",
   "transfer_label_memo": "Message",
   "transfer_label_quantity": "Quantité",
   "transfer_label_to": "Compte du destinataire",
