--- a/app/renderer/assets/locales/ru-RU/transfer.json
+++ b/app/renderer/assets/locales/ru-RU/transfer.json
@@ -5,6 +5,7 @@
   "transfer_destination_account_is_contract": "The destination account has a smart contract enabled, and by sending to this account, your transfer may trigger additional actions which could consume RAM.",
   "transfer_header_available": "available to transfer.",
   "transfer_label_from": "Источник",
+  "transfer_label_jurisdictions": "Jurisdictions",
   "transfer_label_memo": "Памятка",
   "transfer_label_quantity": "Количество",
   "transfer_label_to": "Получатель",
