--- a/app/renderer/assets/locales/en-US/tools.json
+++ b/app/renderer/assets/locales/en-US/tools.json
@@ -17,6 +17,9 @@
   "tools_beos_account_validation_error": "Illegal BEOS account name: account must have 12 symbols (a-z lower case only, 1-5 and . not at the end are allowed). The creation of the account will fail unless the creating account has access to a premium namespace.",
   "tools_bid_highest_bid": "highest bid",
   "tools_bid_name_bid": "Your Bid Amount",
+  "tools_keys_key_generation_save_keys": "Save Keys to Wallet",
+  "tools_keys_key_generation_header_r2": "Generate Keypairs",
+  "tools_keys_key_generation_subheader_message_r2": "Securely generate new keypairs to either save in your local wallet or copy to an external application.",
   "tools_bid_name_highest_bid": "Highest Bid",
   "tools_bid_name_info_content": "Name bidding allows you to place a bid on any 1-11 character name.",
   "tools_bid_name_info_header": "Name Bidding",
@@ -218,6 +221,7 @@
   "tools_keys_key_validator_subheader": "Converts a Private Key into the associated Public Key",
   "tools_menu_advanced_header": "Advanced Tools",
   "tools_menu_airgrabs": "Airgrabs",
+  "tools_menu_managekeys": "Manage Keys",
   "tools_menu_beos_crosschaintransfer": "Crosschain Transfer (BEOS)",
   "tools_menu_blockchains": "Manage Blockchains",
   "tools_menu_contacts": "Contacts",
