--- a/app/renderer/assets/locales/en-US/global.json
+++ b/app/renderer/assets/locales/en-US/global.json
@@ -3,14 +3,10 @@
   "account_that_uses_a_proxy_is_not_allowed_to_become_a_proxy": "This account currently has set it's votes to another proxy, and cannot itself register as a proxy. To remove the set proxy, click the Change Voter Proxy button on the Producer Voting page.",
   "cannot_undelegate_bandwidth_until_the_chain_is_activated": "This blockchain has yet to have 15 percent of it's tokens staked and therefore unstaking is currently disabled. Once that percentage is reached, you will be able to unstake your tokens.",
   "error": "Error",
-  "global_account_import_private_cold_wallet_header": "Cold Wallet",
-  "global_account_import_private_cold_wallet_subheader": "A wallet designed to work on an offline computer acting as a cold storage device.",
-  "global_account_import_private_cold_wallet_description": "Any wallet created in this mode will only be able sign 'Unsigned Transaction' files saved using a 'Watch Wallet' on a separate computer. Since this mode of operation is entirely offline, it does not validate any of the information about the account(s) you setup. Please ensure it is the correct information or transaction signing will fail.",
   "error_accountName_not_unique_in_contacts": "This account name is already in your list of contacts.",
   "error_account_does_not_exist": "This account name does not exist.",
   "error_account_does_not_exist_on_chain": "The {{account}} account does not seem to exist on the specified blockchain.",
   "error_account_name_not_available": "This Account Name has already been taken.",
-  "error_accountName_not_unique_in_contacts": "This account name is already in your list of contacts.",
   "error_bid_is_too_low": "Bid must be 10 percent higher than the current highest bid.",
   "error_bitshares_error": "Bitshares fee exceeds the quantity.",
   "error_cannot_transfer_to_self": "Invalid recipient, cannot transfer funds to self.",
@@ -60,6 +56,8 @@
   "error_withdraw_account_validation_failed": "Unexpected error. Cannot validate withdraw account.",
   "global_account_edit_modal_header": "Wallet/Account Details",
   "global_account_edit_modal_subheader": "The internal details used in this application for this Wallet/Account.",
+  "global_account_import_existing_accounts": "Accounts found using existing key pairs.",
+  "global_account_import_existing_description": "Using the existing key pairs saved within Anchor, we will automatically attempt to find all accounts that you have access to for this blockchain. Add additional private keys to find more accounts.",
   "global_account_import_ledger_account_lookup_content": "Loading all accounts that match the Public Key provided by the Ledger",
   "global_account_import_ledger_account_lookup_header": "Retrieving Accounts",
   "global_account_import_ledger_communicating_content": "Retrieving Public Key based on the index provided from the Ledger device.",
@@ -70,6 +68,9 @@
   "global_account_import_ledger_not_connected_content_r2": "The Ledger device must be connected and ready before continuing. Click the USB icon in the upper right menu to connect your device.",
   "global_account_import_ledger_not_connected_header_r2": "Ledger not found",
   "global_account_import_ledger_select_description": "Select the accounts to import from the list below.",
+  "global_account_import_private_cold_wallet_description": "Any wallet created in this mode will only be able sign 'Unsigned Transaction' files saved using a 'Watch Wallet' on a separate computer. Since this mode of operation is entirely offline, it does not validate any of the information about the account(s) you setup. Please ensure it is the correct information or transaction signing will fail.",
+  "global_account_import_private_cold_wallet_header": "Cold Wallet",
+  "global_account_import_private_cold_wallet_subheader": "A wallet designed to work on an offline computer acting as a cold storage device.",
   "global_account_import_private_description": "To import additional accounts, simply enter the private key. The app will convert it to a public key and lookup all accounts with relevant permissions.",
   "global_account_import_private_key": "Private Key (51 characters and starts with the number 5)",
   "global_account_import_private_requires_hash_button": "Setup Password",
@@ -119,12 +120,15 @@
   "global_form_field_account_manual": "Account Name",
   "global_form_field_account_options": "Transfer to:",
   "global_modal_account_import_cold_wallet": "Cold Wallet",
+  "global_modal_account_import_existing_wallet": "Automatically Detect",
   "global_modal_account_import_hot_check_key": "Find Accounts",
   "global_modal_account_import_hot_wallet": "Hot Wallet",
-  "global_modal_account_import_ledger_wallet": "Ledger Wallet",
+  "global_modal_account_import_hot_wallet_r2": "Using Private Key",
+  "global_modal_account_import_ledger_wallet": "Using Ledger",
   "global_modal_account_import_undefined_wallet": "Legacy Wallet",
   "global_modal_account_import_wait_wallet": "Awaiting Creation",
   "global_modal_account_import_watch_wallet": "Watch Wallet",
+  "global_modal_account_import_watch_wallet_r2": "Read Only",
   "global_modal_settings_customtoken_add": "Add Custom Token",
   "global_modal_settings_customtoken_confirm": "Confirm Token Addition",
   "global_modal_settings_customtoken_confirm_issuer": "Token Issuer",
