Added Appearance section with a Reset button.

--- a/app/renderer/assets/locales/en-US/tools.json
+++ b/app/renderer/assets/locales/en-US/tools.json
@@ -228,6 +228,7 @@
   "tools_menu_contracts": "Smart Contracts",
   "tools_menu_create_account": "Create Account",
   "tools_menu_customtokens": "Airdrops / Custom Tokens",
+  "tools_menu_display": "Appearance",
   "tools_menu_delegations": "Delegations",
   "tools_menu_governance_header": "Governance Tools",
   "tools_menu_governance_proposals": "Proposals",
