jurisdiction history, sticky voter menu, fix tooltip bp search and lock

--- a/app/renderer/assets/locales/en-US/actions.json
+++ b/app/renderer/assets/locales/en-US/actions.json
@@ -5,6 +5,9 @@
   "actions_table_view_explorer": "View Account on Block Explorer",
   "actions_table_header_one": "Past Actions",
   "actions_table_header_two": "Time ago",
+  "actions_table_header_three": "Jurisdictions",
+  "actions_table_history_one": "Sent",
+  "actions_table_history_two": "Passed",
   "actions_table_none":"No actions data loaded yet.",
   "actions_table_row_claim_text_one": "Claimed ",
   "actions_table_row_transfer_from": "from",
