--- a/app/renderer/assets/locales/es-ES/actions.json
+++ b/app/renderer/assets/locales/es-ES/actions.json
@@ -5,6 +5,9 @@
   "actions_table_view_explorer": "Ver Cuenta en el Explorador de Bloque",
   "actions_table_header_one": "Acciones pasadas",
   "actions_table_header_two": "Hace tiempo",
+  "actions_table_header_three": "Jurisdictions",
+  "actions_table_history_one": "Sent",
+  "actions_table_history_two": "Passed",
   "actions_table_none": "No hay datos de acciones todavía cargados.",
   "actions_table_row_claim_text_one": "Claimed ",
   "actions_table_row_transfer_from": "desde",
