--- a/app/renderer/assets/locales/id-ID/actions.json
+++ b/app/renderer/assets/locales/id-ID/actions.json
@@ -5,6 +5,9 @@
   "actions_table_view_explorer": "Lihatlah Akun di Block Explorer",
   "actions_table_header_one": "Tindakan terdahulu",
   "actions_table_header_two": "Beberapa saat yang lalu",
+  "actions_table_header_three": "Jurisdictions",
+  "actions_table_history_one": "Sent",
+  "actions_table_history_two": "Passed",
   "actions_table_none": "Belum ada data yang tersimpan.",
   "actions_table_row_claim_text_one": "Diklaim ",
   "actions_table_row_transfer_from": "dari",
