--- a/app/renderer/assets/locales/ko-KR/actions.json
+++ b/app/renderer/assets/locales/ko-KR/actions.json
@@ -5,6 +5,9 @@
   "actions_table_view_explorer": "블록 탐색기에 계정 보기",
   "actions_table_header_one": "작업 기록",
   "actions_table_header_two": "시간표",
+  "actions_table_header_three": "Jurisdictions",
+  "actions_table_history_one": "Sent",
+  "actions_table_history_two": "Passed",
   "actions_table_none": "아직 작업의 데이터를 가져오지 않았습니다.",
   "actions_table_row_claim_text_one": "회수됨 ",
   "actions_table_row_transfer_from": "from",
