--- a/app/renderer/assets/locales/es-ES/ram.json
+++ b/app/renderer/assets/locales/es-ES/ram.json
@@ -14,6 +14,7 @@
   "ram_form_button_sell": "Vender RAM",
   "ram_form_label_amount_in_bytes": "Cantidad de RAM (en Bytes)",
   "ram_form_label_amount_in_chain_symbol": "Cost of RAM (in {{chainSymbol}})",
+  "ram_form_label_jurisdictions": "Jurisdictions",
   "ram_form_text_amount_estimate": "La cantidad estimada es",
   "ram_form_text_estimate": "El costo estimado es",
   "ram_sell_button_cta": "Vender RAM",
