--- a/app/renderer/assets/locales/es-ES/actions.json
+++ b/app/renderer/assets/locales/es-ES/actions.json
@@ -8,6 +8,7 @@
   "actions_table_header_three": "Jurisdictions",
   "actions_table_history_one": "Sent",
   "actions_table_history_two": "Passed",
+  "actions_table_history_popup": "Click here to see jurisdiction history.",
   "actions_table_none": "No hay datos de acciones todavía cargados.",
   "actions_table_row_claim_text_one": "Claimed ",
   "actions_table_row_transfer_from": "desde",
