--- a/app/renderer/assets/locales/ja-JP/actions.json
+++ b/app/renderer/assets/locales/ja-JP/actions.json
@@ -8,6 +8,7 @@
   "actions_table_header_three": "Jurisdictions",
   "actions_table_history_one": "Sent",
   "actions_table_history_two": "Passed",
+  "actions_table_history_popup": "Click here to see jurisdiction history.",
   "actions_table_none": "まだロード済みの操作データがありません。",
   "actions_table_row_claim_text_one": "請求済 ",
   "actions_table_row_transfer_from": "送信者:",
