--- a/app/renderer/assets/locales/el-GR/producers.json
+++ b/app/renderer/assets/locales/el-GR/producers.json
@@ -44,6 +44,7 @@
   "producer_voter_remove_all_votes_header": "Remove all votes?",
   "producer_voter_remove_all_votes_subheader": "Saving after removing all existing votes will uncast any vote you have previously cast for any producer.",
   "producer_voter_save_changes": "Submit votes for selected producers",
+  "producers_label_jurisdictions": "Jurisdictions",
   "producer_voter_total_staked": "Total Staked",
   "producer_voter_unregistered_block_producers": "Unregistered Producers",
   "producer_voter_votes_used": "total votes cast",
