--- a/app/renderer/assets/locales/it-IT/producers.json
+++ b/app/renderer/assets/locales/it-IT/producers.json
@@ -44,6 +44,7 @@
   "producer_voter_remove_all_votes_header": "Rimuovi tutti i voti?",
   "producer_voter_remove_all_votes_subheader": "Salvando dopo aver rimosso tutti i voti esistenti, verrà annullato ogni voto che hai precedentemente assegnato a qualsiasi producer.",
   "producer_voter_save_changes": "Submit votes for selected producers",
+  "producers_label_jurisdictions": "Jurisdictions",
   "producer_voter_total_staked": "Totale impegnato",
   "producer_voter_unregistered_block_producers": "Unregistered Producers",
   "producer_voter_votes_used": "totale dei voti inviati",
