--- a/app/renderer/assets/locales/ja-JP/contract.json
+++ b/app/renderer/assets/locales/ja-JP/contract.json
@@ -14,6 +14,7 @@
   "interface_data_subheader": "スマートコントラクトの全コード自体は以下に表示されます。",
   "interface_form_action_button": "トランザクションを作成",
   "interface_form_action_header": "アクションパラメータ",
+  "interface_form_action_label_jurisdictions": "Jurisdictions",
   "interface_form_action_instructions": "このアクションのこのスマートコントラクトにトランザクションを送信したい場合は、以下の欄に記入して下さい。",
   "interface_form_action_subheader": "選択したコントラクトアクションは以下のパラメータを使用します。",
   "interface_form_field_options_entry": "Enter each value and press enter...",
