--- a/app/renderer/assets/locales/ja-JP/tools.json
+++ b/app/renderer/assets/locales/ja-JP/tools.json
@@ -136,6 +136,7 @@
   "tools_form_contact_label": "説明/ラベル",
   "tools_form_contact_submit": "保存",
   "tools_form_create_account_account_name": "アカウント名",
+  "tools_form_create_account_jurisdictions": "Jurisdictions",
   "tools_form_create_account_account_name_warning": "アカウント名は通常ちょうど12文字でなければなりません。プレミアム名前空間へのアクセスがない場合はアカウントの作成は失敗します。",
   "tools_form_create_account_active_key": "アクティブ公開鍵",
   "tools_form_create_account_back": "戻る",
