--- a/app/renderer/assets/locales/ko-KR/contract.json
+++ b/app/renderer/assets/locales/ko-KR/contract.json
@@ -14,6 +14,7 @@
   "interface_data_subheader": "스마트 계약 코드 전체가 아래에 표시됩니다.",
   "interface_form_action_button": "거래 생성하기",
   "interface_form_action_header": "작업 매개 변수",
+  "interface_form_action_label_jurisdictions": "Jurisdictions",
   "interface_form_action_instructions": "이 작업에 대해 스마트 계약서에 거래를 제출하려면 아래 입력란을 작성하세요.",
   "interface_form_action_subheader": "선택한 계약 작업은 다음 매개 변수를 사용합니다.",
   "interface_form_field_options_entry": "Enter each value and press enter...",
