--- a/app/renderer/assets/locales/ko-KR/tools.json
+++ b/app/renderer/assets/locales/ko-KR/tools.json
@@ -136,6 +136,7 @@
   "tools_form_contact_label": "Description/Label",
   "tools_form_contact_submit": "Save",
   "tools_form_create_account_account_name": "계정 이름",
+  "tools_form_create_account_jurisdictions": "Jurisdictions",
   "tools_form_create_account_account_name_warning": "계정 이름은 정확히 12자를 필요합니다. 계정 생성시 프리미엄 네임 스페이스에 대한 권한이 없으면 계정 생성이 실패합니다.",
   "tools_form_create_account_active_key": "사용중인 공개 키",
   "tools_form_create_account_back": "뒤로",
