--- a/app/renderer/assets/locales/de-DE/global.json
+++ b/app/renderer/assets/locales/de-DE/global.json
@@ -151,6 +151,8 @@
   "global_transaction_complete_link_to": "Link to",
   "global_transaction_complete_message": "Your transaction(s) have been submitted to the blockchain.",
   "global_transaction_complete_title": "Transaction(s) Submitted",
+  "global_transaction_complete_jurisdiction_message": "Transaction may be deferred due to jurisdiction(s) when block producer specific to selected jurisdiction(s) is not producing at that moment. It means that a whole round must be awaited (200 seconds) before the transaction will be processed.",
+  "global_transaction_complete_jurisdiction_title": "  Transaction(s) processing is deferred",
   "global_transaction_complete_warning_message": "Submitting a transaction does not guarantee it will be confirmed. To ensure that this transaction has been completed and confirmed within the network, please reference the above transaction ID on a block explorer to ensure it enters the last irreversible block.",
   "global_transaction_complete_warning_title": "Transaction(s) are unconfirmed",
   "global_transaction_full_details_content": "The full data from this transaction is listed below.",
