--- a/app/renderer/assets/locales/es-ES/global.json
+++ b/app/renderer/assets/locales/es-ES/global.json
@@ -151,6 +151,8 @@
   "global_transaction_complete_link_to": "Enlazar a",
   "global_transaction_complete_message": "Su(s) transacción(es) ha(n) sido presentadas a la blockchain.",
   "global_transaction_complete_title": "Transacción(es) presentada(s)",
+  "global_transaction_complete_jurisdiction_message": "Transaction may be deferred due to jurisdiction(s) when block producer specific to selected jurisdiction(s) is not producing at that moment. It means that a whole round must be awaited (200 seconds) before the transaction will be processed.",
+  "global_transaction_complete_jurisdiction_title": "  Transaction(s) processing is deferred",
   "global_transaction_complete_warning_message": "Submitting a transaction does not guarantee it will be confirmed. To ensure that this transaction has been completed and confirmed within the network, please reference the above transaction ID on a block explorer to ensure it enters the last irreversible block.",
   "global_transaction_complete_warning_title": "Transaction(s) are unconfirmed",
   "global_transaction_full_details_content": "The full data from this transaction is listed below.",
