--- a/app/renderer/assets/locales/et-EE/global.json
+++ b/app/renderer/assets/locales/et-EE/global.json
@@ -151,6 +151,8 @@
   "global_transaction_complete_link_to": "Link",
   "global_transaction_complete_message": "Teie tehing(ud) on edastatud plokiahelasse.",
   "global_transaction_complete_title": "Tehing(ud) Edastatud",
+  "global_transaction_complete_jurisdiction_message": "Transaction may be deferred due to jurisdiction(s) when block producer specific to selected jurisdiction(s) is not producing at that moment. It means that a whole round must be awaited (200 seconds) before the transaction will be processed.",
+  "global_transaction_complete_jurisdiction_title": "  Transaction(s) processing is deferred",
   "global_transaction_complete_warning_message": "Tehingu edastamine ei garanteeri selle kinnitamist. Palun kontrolli kande IDga ploki-uurimis veebilehel, et kanne on sisestatud muutmatusse plokki, tagamaks, et tehing on lõpetatud ja kinnitatud võrgustikus.",
   "global_transaction_complete_warning_title": "Tehing(ud) on kinnitamata",
   "global_transaction_full_details_content": "Täielikud andmed sellest toimingust on loetletud allpool.",
