--- a/app/renderer/assets/locales/ru-RU/global.json
+++ b/app/renderer/assets/locales/ru-RU/global.json
@@ -151,6 +151,8 @@
   "global_transaction_complete_link_to": "Link to",
   "global_transaction_complete_message": "Ваша транзакция была отправлена в блокцепь EOS.",
   "global_transaction_complete_title": "Транзакция отправлена",
+  "global_transaction_complete_jurisdiction_message": "Transaction may be deferred due to jurisdiction(s) when block producer specific to selected jurisdiction(s) is not producing at that moment. It means that a whole round must be awaited (200 seconds) before the transaction will be processed.",
+  "global_transaction_complete_jurisdiction_title": "  Transaction(s) processing is deferred",
   "global_transaction_complete_warning_message": "Отправка транзакции не гарантирует что она будет подтверждена. Чтобы убедиться, что эта транзакция завершена и подтверждена в сети, обратитесь к вышеуказанному идентификатору транзакции в обозревателе блоков, чтобы убедиться, что она входит в последний необратимый блок.",
   "global_transaction_complete_warning_title": "Транзакция еще не подтверждена",
   "global_transaction_full_details_content": "The full data from this transaction is listed below.",
